--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/Student
 spring.datasource.username=testUser
 spring.datasource.password=test123
+
+
+#Active MQ
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.username=admin
+spring.activemq.password=admin
+spring.activemq.packages.trust-all=true
